Fix transparently values of 10%, 20% and others not being saved and restored correctly in color scheme editor.  Use qRound() on the opacity float instead of (int) cast.

Patch by Andre Wisplinghoff

BUG:181006


svn path=/trunk/KDE/kdebase/apps/konsole/; revision=912671